[gd_scene load_steps=4 format=3 uid="uid://b4vqsmmw8umat"]

[ext_resource type="PackedScene" uid="uid://ceah5dbjd0bxm" path="res://game/pause_menu.tscn" id="1_3qdfi"]
[ext_resource type="Script" uid="uid://b2mthbd5crqv5" path="res://scripts/player_menu.gd" id="1_nw27i"]
[ext_resource type="Texture2D" uid="uid://rwtq0qgxe3e7" path="res://materials/dot (1) (1).png" id="2_waps8"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nw27i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="crosshair" type="TextureRect" parent="CanvasLayer"]
offset_left = 975.0
offset_top = 531.0
offset_right = 1175.0
offset_bottom = 731.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_waps8")

[node name="pause_menu" parent="." instance=ExtResource("1_3qdfi")]
visible = false

[connection signal="pressed" from="pause_menu/resume" to="." method="resume_game"]
[connection signal="pressed" from="pause_menu/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="pause_menu/quit_game" to="." method="quit_game"]

[editable path="pause_menu"]
